--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dreamfly-Flugschuhle</title>
+
+  <link href="./style/main.css" rel="stylesheet"/>
+  <link href='https://fonts.googleapis.com/css?family=Dosis:300,400,700,800'rel='stylesheet'type='text/css'>
+  <title>DreamFLY-Flugschuhle</title>
 </head>
 <body>
-  Hello World
-  
+  <header>
+    <img src="img/872480.svg" alt="Dreamfly-logo" class="logo"/>
+  </header>
+  <main>
+    <h1>Sie möchte das Fliegen lernen?</h1>
+    <p>Gerne könne Sie noch heute eine Flugstunde mit mir fereinbaren</p>
+    <a href="#" class="button">Kontakt aufnehmen</a>
+  </main>
 </body>
 </html>
