--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <title>DreamFLY-Flugschuhle</title>
 </head>
 <body>
-  <header>
-    <img src="img/872480.svg" alt="Dreamfly-logo" class="logo"/>
+  <header class="header">
+    <img src="img/872480.svg" alt="Dreamfly-Logo" class="logo"/>
   </header>
-  <main>
-    <h1>Sie möchte das Fliegen lernen?</h1>
-    <p>Gerne könne Sie noch heute eine Flugstunde mit mir fereinbaren</p>
+  <main class="main">
+    <h1 class="main--heading">Sie möchte das Fliegen lernen?</h1>
+    <p>Gerne könne Sie noch heute eine Flugstunde mit mir fereinbaren.</p>
     <a href="#" class="button">Kontakt aufnehmen</a>
   </main>
 </body>
