--- a/backgroundGradients/aufgabe.html
+++ b/backgroundGradients/aufgabe.html
@@ -1,108 +1,104 @@
 <!DOCTYPE html>
-<html lang="de">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Background</title>
+<html lang="en">
 
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700,800" rel="stylesheet" />
-    <!--<link href="./styles.css" rel="stylesheet" type="text/css" />-->
-    <style type="text/css">
-      *{
-        margin: 0;padding: 0%;box-sizing: border-box;
-      }
-      html{
-        font-family: 'Lato', 'sans-serfis';
-        width: 100%;
-        background-image: linear-gradient(45deg, #40e0d0 33.3%, #ff8c00 33.3%, #ff8c00 66.6%, #ff0080 66.6%);
-        background-attachment: fixed;
-      }
-      body{
-        max-height: 100%;
-      }
-      .container{
-        width: 75%;
-        background-color: white;
-        min-height: 200px;
-        border: 1px solid rgb(100, 100, 100);
-        margin: 50px auto;
-        padding: 25px;
-        border-radius: 2px;
-      }
-      .button{
-        color: black;
-        text-decoration: none;
-        padding: 5px 10px;
-        border: 1px solid rgb(150, 150, 150);
-        border-radius: 2px;
-        background-image: linear-gradient(rgb(211, 204, 204),rgb(100, 100, 100));
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        animation: fly-in 5s ease-in-out 0s 1  both;
-      }
+    html {
+      font-family: 'Courier New', sans-serif;
+      width: 100%;
+      background-image: linear-gradient(45deg, pink, black, green);
+      background-attachment: fixed;
+    }
 
-      @keyframes fly-in{
-        0%{
-          opacity: 0;
-        }
-        100%{
-          opacity: 1;
-        }
-      }
-      .button:hover{
-        background-image: linear-gradient(rgb(100, 100, 100),rgb(221, 204, 204));
-      }
-      .darken-image{
-        margin: 10px 0;
-        width: 300px;
-        height: 500px;
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), 
-        url(pexels-benjamin-suter-3733269.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-      }
-      .darken-image h1{
-        padding-top: 150px;
-        text-align: center;
-        color: white;
-        text-shadow: 0,0,10px black;
-      }
-      .germany{
-        width: 300px;
-        height: 200px;
-        margin: 10px 0;
-        border:1px solid rgb(150, 150, 150);
-        background-image: linear-gradient(
-        rgb(0, 0, 0)33.3%,
-        rgb(222, 2, 0)33.3%,rgb(222, 2, 0)66.6%,
-        rgb(255, 207, 3)66.6%);
-      }
-      .redcross{
-        width: 300px;
-        height: 200px;
-        border: 1px solid rgb(150, 150, 150);
+    .body {
+      max-height: 100%;
+    }
 
-        background-color:white;
-        background-image: 
-        linear-gradient(90deg,transparent 33.3%,rgb(222, 2, 0)33.3%,rgb(222, 2, 0)66.6%,rgb(0, 0, 0, 0)66.6%),
-        linear-gradient(180deg,rgb(0, 0, 0,0)33.3%,rgb(222, 2, 0)33.3%,rgb(222, 2, 0)66.6%,rgb(0, 0, 0, 0)66.6%);
-        background-size: 160px 160px;
-        background-position: center center;
-        background-repeat: no-repeat;
-      }
+    .container {
+      width: 75%;
+      background-color: white;
+      min-height: 200px;
+      border: 1px solid rgb(100, 100, 100);
+      margin: 50px auto;
+      padding: 25px;
+      border-radius: 2px;
+    }
 
+    .button {
+      color: white;
+      margin: 10px 20px 10px 20px;
+      padding: 5px 10px 5px 10px;
+      border: 1px solid rgb(100, 100, 100);
+      border-radius: 1000px;
+      text-decoration: none;
+      background-image: linear-gradient(180deg, rgb(207, 202, 202), rgb(8, 8, 8));
+    }
 
-        
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <a href="#" class="button">Ein Button...</a>
-      <div class="darken-image">
-        <h1>ADVENTURE AWAITS</h1>
-      </div>
-      <div class="germany"></div>
-      <div class="redcross"></div>
+    .button:hover {
+      background-image: linear-gradient(0deg, rgb(207, 202, 202), rgb(8, 8, 8));
+    }
+
+    .darken-image {
+      margin: 20px;
+      width: 300px;
+      height: 500px;
+      background-image:
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(pexels-benjamin-suter-3733269.jpg);
+      background-position: center center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+    .darken-image h1 {
+      padding-top: 150px;
+      color: white;
+      text-align: center;
+      text-shadow: 0 0 10px black;
+    }
+
+    .germany {
+      width: 300px;
+      height: 200px;
+      margin: 20px;
+      background-color: rgb(150, 150, 150);
+      background-image: linear-gradient(180deg, black 33.3%, red 33.3%, red 66.6%, rgb(255, 207, 3) 66.6%);
+    }
+
+    .redcross {
+      width: 300px;
+      height: 200px;
+      margin: 20px;
+      background-color: white;
+      border: 1px solid gray;
+      background-image: linear-gradient(90deg, rgb(0, 0, 0, 0) 33.3%, red 33.3%, red 66.6%, transparent 66.6%),
+        linear-gradient(0deg, rgb(0, 0, 0, 0) 33.3%, red 33.3%, red 66.6%, transparent 66.6%);
+      background-size: 160PX 160PX;
+      background-position: center;
+      background-repeat: no-repeat;
+
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <a href="#" class="button">Button...</a>
+    <div class="darken-image">
+      <h1>Das Ende der Straße!!</h1>
     </div>
-  </body>
+    <div class="germany"></div>
+    <div class="redcross"></div>
+  </div>
+</body>
+
 </html>
