--- a/dreamFLyFlugschuhle/index.html
+++ b/dreamFLyFlugschuhle/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="./style/main.css" rel="stylesheet"/>
-  <link href='https://fonts.googleapis.com/css?family=Dosis:300,400,700,800'rel='stylesheet'type='text/css'>
+  <link href="./style/main.css" rel="stylesheet" />
+  <link href='https://fonts.googleapis.com/css?family=Dosis:300,400,700,800' rel='stylesheet' type='text/css'>
   <title>DreamFLY-Flugschuhle</title>
 </head>
+
 <body>
   <header class="header">
-    <img src="img/872480.svg" alt="Dreamfly-Logo" class="logo"/>
+    <img src="img/872480.svg" alt="Dreamfly-Logo" class="logo" />
   </header>
   <main class="main">
     <h1 class="main--heading">Sie möchte das Fliegen lernen?</h1>
-    <p>Gerne könne Sie noch heute eine Flugstunde mit mir fereinbaren.</p>
+    <p class="main--paragraph">Gerne könne Sie noch heute eine Flugstunde mit mir fereinbaren.</p>
     <a href="#" class="button">Kontakt aufnehmen</a>
   </main>
 </body>
+
 </html>
