--- a/transform/index.html
+++ b/transform/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Transform</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700,800" rel="stylesheet" />
-    <style type="text/css">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Transform</title>
 
-        .box {
-            background-color: rgb(230, 230, 230);
-            border: 1px solid rgb(100, 100, 100);
-            width: 250px;
-            height: 250px;
-            
-            transition: all 2s ease-in-out;
-            transform: translate(0px, 0px);
-            /* transform: translate(50px, 0px) rotate(45deg) scale(0.75); */
-        }
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700,800" rel="stylesheet" />
+  <style type="text/css">
+    .box {
+      background-color: rgb(230, 230, 230);
+      border: 1px solid rgb(100, 100, 100);
+      width: 250px;
+      height: 250px;
 
-        .box:hover {
-            opacity: 0.25;
-            transform: translate(100px, 100px);
-            /* transform: translate(50px, 0px) rotate(0deg) scale(1); */
-        }
+      transition: all 2s ease-in-out;
+      transform: translate(0px, 0px);
+      transform: translate(50px, 0px) rotate(45deg) scale(0.75);
+    }
 
-    </style>
-  </head>
-  <body>
-    <div class="box">Ich bin ein Text</div>
-    <p>Lorem Ipsum... </p>
-  </body>
+    .box:hover {
+      opacity: 0.25;
+      transform: translate(100px, 100px);
+      transform: translate(50px, 0px) rotate(0deg) scale(1);
+    }
+  </style>
+</head>
+
+<body>
+  <div class="box">Ich bin ein Text</div>
+  <p>Lorem Ipsum... </p>
+</body>
+
 </html>
