--- a/photography/index.html
+++ b/photography/index.html
@@ -44,16 +44,16 @@
               </svg>
             </a>
           </li>
-          <li class="navigation__list-item navigation__list-item--mobil-hidden">
+          <li class="navigation__list-item navigation__list-item--mobile-hidden">
             <a class="navigation__list-item-link" href="#">Discover</a>
           </li>
-          <li class="navigation__list-item navigation__list-item--mobil-hidden">
+          <li class="navigation__list-item navigation__list-item--mobile-hidden">
             <a class="navigation__list-item-link" href="#">Where to go</a>
           </li>
-          <li class="navigation__list-item navigation__list-item--mobil-hidden">
+          <li class="navigation__list-item navigation__list-item--mobile-hidden">
             <a class="navigation__list-item-link" href="#">What to do</a>
           </li>
-          <li class="navigation__list-item navigation__list-item--mobil-hidden">
+          <li class="navigation__list-item navigation__list-item--mobile-hidden">
             <a class="navigation__list-item-link" href="#">Plan your photos</a>
           </li>
           <li class="navigation__list-item navigation__list-item--menu">
@@ -80,7 +80,7 @@
         <p class="header__heading-sub">Master landscape photography in 10 days</p>
       </div>
     </div>
-    <div class="slope"></div>
+    <div class="header__slope"></div>
   </header>
 </body>
 
